fix: Artist page bottom sidebar collapse with content

--- a/src/pages/Artist/Artist.module.css
+++ b/src/pages/Artist/Artist.module.css
@@ -1,11 +1,11 @@
 .mainContainer {
-  padding: 3rem 6%;
-  padding-bottom: 0px;
+  padding: 0.5rem 3rem 3rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   gap: 3.5rem;
   flex-wrap: wrap;
+  height: 100%;
 }
 
 .mainContainer > * {
